--- a/contacts.html
+++ b/contacts.html
@@ -12,9 +12,9 @@
         <a href="/">Главная страница нашего сайта</a>
         <nav>
             <ul>
-                <li><a href="/">Главная</a></li>
-                <li><a href="/about.html">О нас</a></li>
-                <li><a href="/contacts.html">Контакты</a></li>
+                <li><a href="">Главная</a></li>
+                <li><a href="about.html">О нас</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
             </ul>
         </nav>
     </header>
