--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Главная - Название вашего сайта</title>
     <meta name="description" content="Краткое описание главной страницы вашего сайта">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
+    <script src="script.js"></script>
     <header>
         <a href="/">Главная страница нашего сайта</a>
         <nav>
@@ -37,10 +39,46 @@
             <h2>Контакты</h2>
             <p>Наш телефон....</p>
         </section>
+
+        <h1>Форма обратной связи</h1>
+        <form id="ContactForm">
+            <label for="name">Ваше имя:</label>
+            <input type="text" id="name" name="username" placeholder="Иван Иванов" required>
+
+            <label for="phone">Номер телефона:</label>
+            <input type="text" id="phone" name="phone" type="tel" inputmode="tel" placeholder="+7-999-999-99-99" required><br>
+
+            <label for="email">Электронная почта:</label>
+            <input type="text" id="email" name="email" placeholder="ivanov@mail.ru">
+
+            <label for="cource">Выберите курс:</label>
+            <select id="cource" name="cource">
+                <option value="">--</option>
+                <option value="1">1 курс</option>
+                <option value="2">2 курс</option>
+                <option value="3">3 курс</option>
+                <option value="4">4 курс</option>
+                <option value="other">Другое</option>
+            </select>
+            
+
+            <label for="message">Ваше обращение:</label>
+            <textarea id="message" name="message" rows="10" required></textarea>
+
+            <button type="submit">Отправить</button>
+            <button type="reset">Очистить</button>
+        </form>
+
+        <img src="static/img/img.png" alt="Картинка рабочего стола" width="1280" height="720" loading="lazy"> 
+
+        <!-- Вставка с Rutube; замените XXXXXXXXXXXX на ID ролика -->
+        <div class="media">
+            <iframe width="720" height="405" src="https://rutube.ru/play/embed/398026816068021205a6a9da711e6ec1/" style="border: none;" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div>
     </main>
 
     <footer>
         <p>&copy; 2023 Название вашего сайта. Все права защищены.</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
-</body>
+</body>     
